<resources>
    <string name="app_name">MBI</string>
    <string name="precedente">prev</string>
    <string name="primo">home</string>
    <string name="successivo">next</string>
    <string name="cerca">find</string>
    <string name="immagine">image</string>
    <string name="video">video</string>
    <string name="audio">audio</string>
    <string name="menu">menu</string>
    <string name="settings">settings</string>
    <string name="scale_type">scale type</string>
    <string name="theme">theme</string>
    <string name="about">about</string>
    <string name="help">help</string>
    <string name="center_crop">center crop</string>
    <string name="fit_center">fit center</string>
    <string name="center_inside">center inside</string>
    <string name="fit_xy">fit xy</string>
    <string name="matrix">matrix</string>
    <string name="center">center</string>
    <string name="fit_start">fit start</string>
    <string name="fit_end">fit end</string>
    <string name="light">light</string>
    <string name="dark">dark</string>
    <string name="exit">exit</string>
    <string name="rew">-100</string>
    <string name="fw">+100</string>
    <string name="video_fullscreen">fullscreen</string>
    <string name="full_true">video fullscreen</string>
    <string name="full_false">normal screen</string>
    <string name="imposta_chiave_pixabay">Imposta chiave Pixabay</string>
    <string name="svg_triangle">AnimatedSvgTest</string>
    <string name="play_radio">play</string>
    <string name="svg_pause">pause</string>
    <string name="play_video">play</string>
    <string name="pause_video">pause</string>
    <string name="pause_radio">pause</string>
    <string name="fullscreen">full</string>
    <string name="rewind">rew</string>
    <string name="radio_icon">radio</string>
    <string name="cerca_hint">Cerca</string>
    <string name="search">cerca</string>
    <string name="settings_title">Chiave pixbay</string>
    <string name="back_button_desc">Indietro</string>
    <string name="pixabay_key_label">Chiave</string>
    <string name="pixabay_key_explanation">"Per ottenere una chiave API, visita il sito di Pixabay, registrati e richiedi la chiave.",</string>
    <string name="api_key_input_label">chiave</string>
    <string name="close_button">chiudi</string>
    <string name="save_button">salva</string>
    <string name="select_country">Nazione</string>
    <string name="radio_station_default_name">RADIO</string>
</resources>