<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:material="http://schemas.android.com/apk/res-auto"
    android:id="@+id/controller_video_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="8dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/video_fullscreen"
        style="?attr/materialIconButtonStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="12dp"
        android:contentDescription="@string/fullscreen"
        material:icon="@drawable/ic_fullscreen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/video_rewind"
        style="?attr/materialIconButtonStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="12dp"
        android:contentDescription="@string/rewind"
        material:icon="@drawable/ic_rewind" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/video_play"
        style="?attr/materialIconButtonStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="12dp"
        android:contentDescription="@string/play_video"
        material:icon="@drawable/ic_play" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/video_pause"
        style="?attr/materialIconButtonStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="12dp"
        android:contentDescription="@string/pause_video"
        material:icon="@drawable/ic_pause" />

</LinearLayout>